frontend/src/components/Navbar/Navbar.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

* {
  --dark: #171717d0;
  --darkgrey: #515151;
  --grey: #626262;
  --lightgrey: #f3f3f3;
  --darkgreen: #4c9173;
  --lightgreen: #d3f6d1;
}

/* #navbar > img {
  width: 50px;
  height: 50px;
} */
.navbar {
  display: flex !important;
  justify-content: space-around !important ;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
  position: sticky !important ;
  top: 0;
  height: 90px;
  background-color: white;
  z-index: 1;
}

.navbar.transparent {
  opacity: 0.9;
}

.nav-logo {
  display: flex;
  align-items: center;
  gap: 30px;
}

.nav-logo p {
  color: var(--dark);
  font-size: 28px;
  font-weight: 600;
}

.nav-logo img {
  width: 6vw;
  height: 8vh;
}

.nav-menu {
  display: flex;
  align-items: center;
  list-style: none;
  gap: 50px;
  color: var(--grey);
  font-size: 14px;
  font-weight: 500;
  margin-bottom: -5px;
  margin: 0 200px 0;
}

.nav-menu li {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 5px 10px;
  cursor: pointer;
}

.nav-menu li:hover {
  color: var(--darkgreen);
}

.nav-menu li.active {
  color: var(--darkgreen); /* Change text color when active */
}

.nav-menu hr {
  border: none;
  width: 80%;
  height: 3px;
  border-radius: 10px;
  background: var(--darkgreen) !important;
}

.nav-login-cart {
  display: flex;
  align-items: center;
  gap: 45px;
}

.nav-login-cart button {
  width: 127px;
  height: 48px;
  outline: none;
  border: 1px solid var(--grey);
  border-radius: 75px;
  color: var(--darkgrey);
  font-size: 16px;
  font-weight: 500;
  background: white;
  cursor: pointer;
}

.nav-login-cart button:hover {
  background: var(--lightgrey);
}

.nav-login-cart button:active {
  background: var(--lightgrey);
}

.nav-cart-count {
  width: 22px;
  height: 22px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -35px;
  margin-left: -55px;
  border-radius: 11px;
  font-size: 14px;
  background: var(--darkgreen);
  color: white;
  cursor: pointer;
}

.nav-login-cart img {
  width: 2vw;
  height: 4vh;
  cursor: pointer;
}

.nav-dropdown {
  display: none;
}

/*MEDIA QUERY*/

@media (max-width: 1280px) {
  .navbar {
    padding: 12px 50px;
  }

  .nav-logo img {
    width: 70px;
  }

  .nav-logo p {
    font-size: 18px;
  }

  .nav-menu {
    gap: 30px;
    font-size: 14px;
  }

  .nav-login-cart {
    gap: 30px;
  }

  .nav-login-cart button {
    width: 120px;
    height: 45px;
    font-size: 16px;
  }

  .nav-cart-count {
    margin-left: -40px;
    font-size: 12px;
  }
}

@media (max-width: 1024px) {
  .navbar {
    padding: 12px 30px;
  }

  .nav-menu {
    gap: 15px;
    font-size: 12px;
  }
  .nav-login-cart button {
    width: 80px;
    height: 35px;
    font-size: 14px;
  }
  .nav-login-cart img {
    width: 30px;
  }
  .nav-cart-count {
    width: 18px;
    height: 18px;
  }
}

@media (max-width: 820px) {
  .navbar {
    padding: 10px 0px;
  }

  .nav-dropdown {
    display: block;
    width: 30px;
    rotate: -90deg;
    transition: 0.5s;
  }

  .nav-menu {
    display: none !important;
    display: flex;
    height: 80px;
    width: 100%;
    position: absolute;
    background: white;
    justify-content: center;
    top: 50px;
  }

  .nav-menu-visible {
    display: block !important;
    display: flex;
  }

  .nav-dropdown.open {
    transform: rotate(90deg);
  }
}

